--- a/ayeonJava/.classpath
+++ b/ayeonJava/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="D:/full_stack_2nd_mg/my_lib/dist/mylibraray.jar"/>
 	<classpathentry kind="lib" path="libs/lombok.jar"/>
 	<classpathentry kind="lib" path="libs/json.jar"/>
+	<classpathentry kind="lib" path="libs/mariadb-java-client-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
